# buildthings

./: .gitignore  .reviewboardrc  LICENSE  NEWS.rst  README.rst  pyproject.toml
buildthings/: __init__.py  _version.py  backend.py  config.py  local_paths.py  requirements.py  setuptools_patches.py
buildthings/tests/: test_backend.py  test_config.py  test_filter_dependencies.py  test_get_package_name_from_specifier.py  test_setuptools_patches.py  utils.py
