[build-system]
requires = [
    'packaging',
    'setuptools>=74',
    'toml; python_version < "3.11"',
    'typing_extensions',
]
build-backend = 'buildthings.backend'
backend-path = ['.']


[project]
name = 'buildthings'
version = '1.0.0'
description = 'A Python setuptools-based build backend with super powers'
authors = [
    {name = 'Beanbag, Inc.', email='questions@beanbaginc.com'},
]
license = { text='MIT' }
requires-python = '>=3.8'

dependencies = [
    'packaging',
    'setuptools>=74',
    'toml; python_version < "3.11"',
    'typing_extensions',
]
